--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-easy-crop": "^5.0.6",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.14.0"
   },
